# theremin

./: CMakeLists.txt  README.md  _config.yml  blog.md  build.sh  get_tinkerforge.sh  index.md  manual.md  test.md  theremin.cfg  theresa.cfg
_layouts/: default.html
assets/css/: style.scss
script/: theremin-init  theresa.desktop  theresa.sh  volumedown  volumeup
src/: audio.cpp  audio.h  audio.hpp  config.h  configuration.cpp  configuration.hpp  const.h  input.cpp  input.h  main.cpp  music_util.cpp  music_util.hpp  sensor_input.cpp  sensor_input.h  sensor_input.hpp  user_interface.cpp  user_interface.h  user_interface.hpp  wave_synth.cpp  wave_synth.h  wave_synth.hpp
